--- a/styles.css
+++ b/styles.css
@@ -1,177 +1,93 @@
 body{
+    background-image: linear-gradient(to top, #edf1d6, #e0e7c7, #d1deb8, #c3d5a9, #b3cc9c, #b2cc9b, #b2cb9a, #b1cb99, #c0d3a4, #cedcb0, #dce4bc, #e9edc9);
+    
+    text-align: center; 
     margin:0;
-    text-align: center;
     line-height: 2;
 }
-.top{
-    background-color: #FCFFE7;
-    margin:0;
-    position: relative;
-    height:39rem;
-   
+.top-div{
+    padding-bottom: 50px;
 }
-.htop{
-    color:#000000;
-    position: relative;
-    width:90rem;
-    height:29rem;
-    margin:0 auto 0 auto;
-    padding-top: 6rem;
-    font-size: larger;
-
+.three{width:100px;
+    margin:0 15% 0 15%;
+    display: inline;
 }
-.mid{
-    background-color: #BAD7E9;
-    padding-top:4rem;
-    position: relative;
-}
-.good-at, .learn, .hobby{
-    position:relative;
-    height:15rem;
-    width:90rem;
-    margin:0 auto 0 auto;
+.four{
+    width:100px;
+    margin:0 15% 0 15%;
+    display: inline;
 }
 h1{font-family: 'Tangerine', cursive;
-font-size: 5rem;
-margin:0}
-h1:hover{color:tomato;
-    text-decoration:dotted underline;}
+    font-size: 5rem;
+    margin:0}
+h1:hover{color:#40513B;
+        text-decoration:dotted underline;}
 h2{
     font-family: 'Montserrat', sans-serif;
-}
+    }
 .p-mid{
-    font-size:1.5rem;
-    font-family:'Roboto', sans-serif;
+        font-size:1.1em;
+        font-family:'Montserrat', sans-serif;
+    }
+    .h2good{
+        font-size: 1.5em;
+        color:#40513B;
+    }
+.ak{width:100px;
+margin:20px;}
+.five,.six{
+    width:100px;
+    margin:0 10%;
 }
-.h2good{
-    font-size: 2rem;
-    color:#2B3467
+#hrtop{
+    width:12em;
+    padding:2em 0 2em 0;
+    border-style: none;
+    border-top:0.5em dotted #2B346750;
 }
 hr{
-    width:5rem;
+    width:5em;
+    padding:2em 0 2em 0;
     border-style: none;
-    border-top:0.5rem dotted #2B346750
+    border-top:0.5em dotted #2B346750
 }
-#three{
-    width:10rem;
-    position:absolute;
-    bottom:3rem;
-    right:20rem;
-}
-#five{
-    width:10rem;
-    position:absolute;
-    bottom:3rem;
-    left:20rem;
-}
-
-#four{
-    width:10rem;
-    position:absolute;
-    bottom:20rem;
-    left:9rem;
-}
-
-#six{
-    width:10rem;
-    position:absolute;
-    bottom:20rem;
-    right:9rem;
-}
-
-
-#c{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:2.5rem;
-}
-#cpp{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:17.5rem;
-    }
-#java{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:32.5rem;
-    
-}
-#python{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:47.5rem;
-}
-
-#arduino{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:62.5rem;
-}
-
-#matlab{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:77.5rem;
+#c,#cpp,#java,#python,#arduino,#matlab,#web-dev,#aws,#dbms,#code{
+    width:7em;
+    margin:0 2.5%;
 }
 #c:hover, #java:hover, #arduino:hover{
-    background-color:black;
+    background-color:#000000;
+    border-radius: 25% 50% ;
 }
 #cpp:hover,#python:hover, #matlab:hover{
-    background-color: #EB455F;
-}
-#aws{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:15rem;
-}
-#dbms{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:40em;
+    background-color: #40513B;
+    border-radius: 25% 50%;
+    background-size: 2em;
 
 }
-#web-dev{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    right:15rem;
-    }
 .hobbies{
-    font-family: "Roboto", sans-serif;
+    font-size: medium;
 }
-#code{
-    width:10rem;
-    position:absolute;
-    top:2.5rem;
-    left:40rem;}
-
-.bot{
-    background-color: #EB455F;
+.bot-div{
+    padding-top: 2em;
+    background-color: black;
     margin:0;
 }
 .h2bot{margin:0 auto 0 auto;
-color:#00000070;
-font-size: 1.25rem;
+color:#FFFFFF70;
+font-size: 1em;
 }
 .footer-link{
-    font-size: 1.2rem;
-    font-weight: bold;
-    color:#000000A0;
+    font-size: medium;
+    font-weight:600;
+    color:#FFFFFFA0;
     text-decoration: none;
     padding:0 1rem 0 1rem;
     font-family: 'Roboto', sans-serif;
 
 }
 .pfoot{
-    color:#00000070;
+    color:#FFFFFF70;
     font-family: 'Montserrat', sans-serif;
     margin:0;
 }
